--- a/index.html
+++ b/index.html
@@ -7,20 +7,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet"
           href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css"/>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.20/angular.min.js"></script>
+
+    <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 
 <body ng-controller="carController">
+
 <label style="display:block">
-    Use Bootstrap <input type=checkbox ng-change="updateUiStyle(isBootstrap)" ng-model="isBootstrap">
+Select your cars design
+<select ng-model="selectedUistyle"
+        ng-change="updateUiStyle()"
+        ng-options="option.name for option in possibleUistyles">
+</select><br>
 </label>
 <tmb-dashboard>
-    <tmb-dashboard-button cmd-val="Start" exec-cmd="acceptCommand('startEngine')"></tmb-dashboard-button>
-    <tmb-dashboard-button cmd-val="Stop" exec-cmd="acceptCommand('turnOffEngine')"></tmb-dashboard-button>
-    <tmb-dashboard-button cmd-val="Push" exec-cmd="acceptCommand('pushForward')"></tmb-dashboard-button>
-    <tmb-dashboard-button cmd-val="Pull" exec-cmd="acceptCommand('pullBack')"></tmb-dashboard-button>
+    <tmb-dashboard-button cmd-val="Insert Keys" exec-cmd="acceptCommand('startEngine')"></tmb-dashboard-button>
+    <tmb-dashboard-button cmd-val="Remove Keys" exec-cmd="acceptCommand('turnOffEngine')"></tmb-dashboard-button>
+    <tmb-dashboard-button cmd-val="Accelerate" exec-cmd="acceptCommand('pushForward')"></tmb-dashboard-button>
+    <tmb-dashboard-button cmd-val="Decelerate" exec-cmd="acceptCommand('pullBack')"></tmb-dashboard-button>
 </tmb-dashboard>
 <tmb-messages class="scrolling" msg-array="messageArray"></tmb-messages>
 </body>
