--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
     <script src="script.js"></script>
+    <script src="views.js"></script>
+    <script src="controllers.js"></script>
+    <script src="models.js"></script>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 
