separating concerns part 3
fix

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
     <script src="views/tmbMessages.js"></script>
     <script src="views/tmbDashboard.js"></script>
     <script src="views/tmbDashboardButton.js"></script>
-    <script src="controllers.js"></script>
-    <script src="models.js"></script>
+    <script src="controllers/car.js"></script>
+    <script src="models/settingsService.js"></script>
+    <script src="models/carStateMachineProvider.js"></script>
     <link rel="stylesheet" href="styles.css"/>
 </head>
 
